# libucks

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INTERLAT_LITE_MANUAL.md  QUICKSTART.md  QUICKSTART_V2.md  README.md  V2_IMPLEMENTATION_PLAN.md  main.py  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: INTERLAT_LITE_MANUAL.md
libucks/: _cli.py  central_agent.py  config.py  git_hook_receiver.py  health_monitor.py  init_orchestrator.py  librarian.py  mcp_bridge.py  merging_service.py  mitosis.py  query_orchestrator.py  stale_checker.py  startup_recovery.py  translator.py  watchdog_service.py
libucks/.ipynb_checkpoints/: _cli-checkpoint.py  mcp_bridge-checkpoint.py  translator-checkpoint.py
libucks/diff/: diff_extractor.py
libucks/embeddings/: embedding_service.py
libucks/models/: bucket.py  chunk.py  events.py
libucks/parsing/: aspect_mapper.py  ast_parser.py  grammar_registry.py
libucks/storage/: bucket_registry.py  bucket_store.py
libucks/thinking/: __init__.py  base.py  communication_adapter.py  compressor.py  context_condenser.py  curriculum.py  latent_strategy.py  model_manager.py  text_strategy.py
mps_bitsandbytes-0.7.0/mps_bitsandbytes-0.7.0/: PKG-INFO
scripts/: check_nervous_system.py  query_interlat.py  train_lora_receiver.py
tests/integration/: test_health_and_merge.py  test_latent_query_flow.py  test_routing_accuracy.py
tests/unit/: conftest.py  test_adapter_training.py  test_aspect_mapper.py  test_ast_parser.py  test_bucket_registry.py  test_bucket_store.py  test_central_agent_events.py  (+26 more)
(+12 files in other folders)
